test/instance-checks-6.err.expect
test/instance-checks-6.ktn:1:1: error: cannot match scalar type int with t1
test/instance-checks-6.ktn:1:1: note: t1 (from example) is from here
test/instance-checks-6.ktn:1:13: note: int (from example) is from here
